src/test/ui/parser/issue-81804.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/issue-81804.rs:8:9
   |
LL | fn p([=(}
   |        -^ mismatched closing delimiter
   |        |
   |        unmatched opening delimiter begins here

error: this file contains an unclosed delimiter
  --> $DIR/issue-81804.rs:8:11
   |
LL | fn p([=(}
   |     --    ^
   |     ||
   |     |unclosed delimiter
   |     unclosed delimiter

error: this file contains an unclosed delimiter
  --> $DIR/issue-81804.rs:8:11
   |
LL | fn p([=(}
   |     --    ^
   |     ||
   |     |unclosed delimiter
   |     unclosed delimiter

error: expected pattern, found `=`
  --> $DIR/issue-81804.rs:8:7
   |
LL | fn p([=(}
   |       ^ expected pattern

error: expected one of `)`, `,`, `->`, `where`, or `{`, found `]`
  --> $DIR/issue-81804.rs:8:11
   |
LL | fn p([=(}
   |           ^ expected one of `)`, `,`, `->`, `where`, or `{`

error: aborting due to 5 previous errors

