src/test/ui/parser/issue-81804.rs
// error-pattern: expected pattern, found `=`
// error-pattern: expected one of `)`, `,`, `->`, `where`, or `{`, found `]`

fn main() {}

fn p([=(}
